# etl-project

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/input/: dados_vendas.csv
etl_project/: pipeline.py
etl_project/config/: settings.py
etl_project/extractors/: base_extractor.py  csv_extractor.py
etl_project/loaders/: base_loader.py  excel_loader.py
etl_project/reports/: sales_report.py
etl_project/transformers/: base_transformer.py  vendas_transformer.py
etl_project/utils/: config.py  logger.py  math_utils.py  string_utils.py
etl_project/validators/: vendas_validator.py
notebooks/: README.md
notebooks/examples/: 01_exemplo_pipeline.ipynb  02_relatorios_vendas.ipynb
notebooks/exploratory/: 01_analise_inicial.ipynb  02_transformacao_vendas.ipynb
scripts/: processar_vendas.py
tests/: test_config.py  test_extractor.py  test_loader.py  test_reports.py  test_transformer.py  test_validator.py
tests/test_data/: dados_vendas_teste.csv
