[tool.poetry]
name = "etl_project"
version = "0.1.0"
description = "A modular ETL pipeline project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "etl_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipykernel = "^6.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
